# Comfyui-BaiduTranslate

./: README.md  README_en.md  __init__.py  baidu_clip_node.py  nodes.py  pyproject.toml
